fix wrapping

--- a/src/dock.styl
+++ b/src/dock.styl
@@ -69,5 +69,5 @@ div, a
     position relative
     left 96px
     top 1rem
-    white-space pre-wrap
+    white-space pre
     content "Bryce Tsao\Ahi@bry.cat"
